# URDF_V1

V1/Base_con_ruedas_para_ROS_URDF.SLDASM/: CMakeLists.txt  package.xml
V1/Base_con_ruedas_para_ROS_URDF.SLDASM/config/: joint_names_Base_con_ruedas_para_ROS_URDF.SLDASM.yaml
V1/Base_con_ruedas_para_ROS_URDF.SLDASM/launch/: display.launch  gazebo.launch
V1/Base_con_ruedas_para_ROS_URDF.SLDASM/meshes/: w1.STL  w2.STL  w3.STL  w4.STL
V1/Base_con_ruedas_para_ROS_URDF.SLDASM/urdf/: Base_con_ruedas_para_ROS_URDF.SLDASM.csv  Base_con_ruedas_para_ROS_URDF.SLDASM.urdf
